[package]
name = "ctest"
version = "0.2.22"
authors = [
  "Alex Crichton <alex@alexcrichton.com>",
  "Gonzalo Brito Gadeschi <gonzalobg88@gmail.com>"
]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/gnzlbg/ctest"
homepage = "https://github.com/gnzlbg/ctest"
documentation = "https://docs.rs/ctest"
description = """
Automated tests of FFI bindings.
"""

[dependencies]
syntex_syntax2 = { git = "https://github.com/JohnTitor/garando", rev = "2b70877c7f0d6a6871a417c20fcf3664e99dc4a9" }
cc = "1.0.1"
rustc_version = "0.2"

[workspace]
members = ["testcrate"]
